change httpd conf

--- a/docker-compose-examples/wordpress2/conf/httpd.conf
+++ b/docker-compose-examples/wordpress2/conf/httpd.conf
@@ -481,8 +481,9 @@ LogLevel warn
 # User home directories
 #Include conf/extra/httpd-userdir.conf
 
+# must be  before wordpress vhosts
 # Real-time info on requests and configuration
-#Include conf/extra/httpd-info.conf
+Include conf/extra/httpd-info.conf
 
 # Virtual hosts
 #Include conf/extra/httpd-vhosts.conf
@@ -525,6 +526,4 @@ Include /opt/bitnami/apache/conf/bitnami/bitnami.conf
 AddType application/x-httpd-php .php
 
 # ADDITIONAL CONFIG
-# Real-time info on requests and configuration
-Include conf/extra/httpd-info.conf
 
