moved status config to 00_status-vhost.conf

--- a/docker-compose-examples/wordpress2/conf/00_status-vhost.conf
+++ b/docker-compose-examples/wordpress2/conf/00_status-vhost.conf
@@ -8,9 +8,12 @@
 
 ExtendedStatus On
 
-<Location /server-status>
+<VirtualHost localhost:80>
+  <Location /server-status>
     SetHandler server-status
     Order deny,allow
     Allow from all
-</Location>
+  </Location>
+</VirtualHost>
+
 
