--- a/docker-compose-examples/wordpress2/conf/00_status-vhost.conf
+++ b/docker-compose-examples/wordpress2/conf/00_status-vhost.conf
@@ -8,7 +8,7 @@
 
 ExtendedStatus On
 
-<VirtualHost localhost:80>
+<VirtualHost *:80>
   <Location /server-status>
     SetHandler server-status
     Order deny,allow
